--- a/index.html
+++ b/index.html
@@ -423,10 +423,11 @@
                     </div>
                 </div>
                 <div class="content-blog">
-                <h3>Lorem ipsum dolor sit</h3>
+                <h3>Café en familia</h3>
                 <span>6 de noviembre 2025</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est fugiat sint, eos molestiae a totam 
-                ducimus quaerat placeat fugit dicta iste, esse repellat quam vero? Nisi quas fugiat perferendis illum?</p>
+                <p> En cada taza es una excusa para compartir.
+                   Ven a disfrutar de un ambiente acogedor donde las risas, las charlas y el aroma del café llenan el lugar.
+                     Perfecto para venir con tus amigos, tu pareja o toda la familia. </p>
                  <div class="btn-read-more">Leer más</div>
                 </div>
             </div>
@@ -444,10 +445,10 @@
                     </div>
                 </div>
                 <div class="content-blog">
-                <h3>Lorem ipsum dolor sit</h3>
+                <h3>La casa del café</h3>
                 <span>6 de noviembre 2025</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est fugiat sint, eos molestiae a totam 
-                ducimus quaerat placeat fugit dicta iste, esse repellat quam vero? Nisi quas fugiat perferendis illum?</p>
+                <p>seleccionamos granos de la más alta calidad y los preparamos con pasión.
+                 Porque cada detalle importa cuando se trata de disfrutar una experiencia única.</p>
                  <div class="btn-read-more">Leer más</div>
                 </div>
             </div>
@@ -465,10 +466,11 @@
                     </div>
                 </div>
                 <div class="content-blog">
-                <h3>Lorem ipsum dolor sit</h3>
+                <h3>Sostenibilidad</h3>
                 <span>6 de noviembre 2025</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est fugiat sint, eos molestiae a totam 
-                ducimus quaerat placeat fugit dicta iste, esse repellat quam vero? Nisi quas fugiat perferendis illum?</p>
+                <p>Creemos en un café responsable.
+                      Por eso trabajamos con pequeños caficultores guatemaltecos que cultivan con pasión y respeto por la tierra.
+                      Cada taza que disfrutas apoya el comercio local y la agricultura sostenible.</p>
                  <div class="btn-read-more">Leer más</div>
                 </div>
             </div>
