--- a/index.html
+++ b/index.html
@@ -35,9 +35,17 @@
                 <i class="fa-solid fa-basket-shopping"></i>
                 <div class="container-shopping">
                 <span class="text">Carrito</span>
-                <spa class="number">(0)</spa>
+                <span class="number">(0)</span>
                 </div>
             </div>
+          <!-- Carrito flotante -->
+       <div class="cart-container">
+          <h3>Tu carrito</h3>
+              <ul class="cart-items"></ul>
+          <p class="cart-total">Total: Q0.00</p>
+     <button class="btn-clear">Vaciar carrito</button>
+         </div>
+
          </div>
         </div>
 
@@ -46,7 +54,7 @@
                 <i class="fa-solid fa-bars"></i>
                 <ul class="menu">
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Moca Helado</a></li>
+                    <li><a href="moca.html">Moca </a></li>
                     <li><a href="#">Expreso</a></li>
                     <li><a href="#">Capuchino</a></li>
                     <li><a href="#">Mas</a></li>
@@ -131,7 +139,7 @@
                 <span>Mejores vendidos</span>
              </div>
 
-             <div class="container-products">
+            <div  class="container-products">
                 <!--Producto 1-->
                    <div class="card-product">
                     <div class="container-img">
@@ -559,7 +567,7 @@
 
 <script src="https://kit.fontawesome.com/527d4385ba.js" 
 crossorigin="anonymous"></script>
-
+<script src="script.js"></script>
 </body>
 </html>
 
