--- a/moca.html
+++ b/moca.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Mocas Expreso</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="stylemoca.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -53,7 +55,6 @@
                     <li><a href="#">Capuchino</a></li>
                     <li><a href="#">Mas</a></li>
                     <li><a href="#">Blog</a></li>
-
                 </ul>
 
                 <form class="search-form">
@@ -132,6 +133,70 @@
                             <i class="fa-regular fa-basket-shopping"></i>
                         </span>
                        <p class="price">Q12.00</p> 
+                    </div>
+                   </div>
+                   <!--Producto3-->
+                     <div class="card-product">
+                    <div class="container-img">
+                        <img src="img moca/moca helado.jpeg." alt="Cafe Helado">
+                        <span class="discount"></span>
+                        <div class="button-group">
+                            <span>
+                             <i class="fa-solid fa-eye"></i>
+                            </span>
+                            <span>
+                             <i class="fa-regular fa-heart"></i>
+                            </span>
+                            <span>
+                               <i class="fa-solid fa-code-compare"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="content-card-product">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                           <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <h3>Moca Helado</h3>
+                        <span class="add-cart">
+                            <i class="fa-regular fa-basket-shopping"></i>
+                        </span>
+                       <p class="price">Q15.00</p> 
+                    </div>
+                   </div>
+                   <!--Producto4-->
+                   <div class="card-product">
+                    <div class="container-img">
+                        <img src="img moca/mocaccino.jpeg" alt="Mocaccino">
+                        <span class="discount"></span>
+                        <div class="button-group">
+                            <span>
+                             <i class="fa-solid fa-eye"></i>
+                            </span>
+                            <span>
+                             <i class="fa-regular fa-heart"></i>
+                            </span>
+                            <span>
+                               <i class="fa-solid fa-code-compare"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="content-card-product">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                             <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <h3>Mocaccino/h3>
+                        <span class="add-cart">
+                            <i class="fa-regular fa-basket-shopping"></i>
+                        </span>
+                       <p class="price">Q11.00</p> 
                     </div>
                    </div>
 
